# ChessAI

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
ChessGame/ChessGame_lib/: ChessBoard.cpp  ChessBoard.h  GameController.cpp
ChessGame/ChessGame_lib/ChessPiece/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
comp/: ChessBoard.cpp  ChessBoard.h  ChessPiece.cpp  ChessPiece.h  GameController.cpp  GameController.h
comp/ChessPiece/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  ColorsType.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
